package Diadoc.Api.Proto;

option java_outer_classname = "ResolutionRequestTypeProtos";

enum ResolutionRequestType
{
	UnknownResolutionRequestType = -1;
	ApprovementRequest = 0;
	SignatureRequest = 1;
	ApprovementSignatureRequest = 2;
	Custom = 3;
}